--- a/SimTECH/SimTECH/Pages/Leagues/RangeInput.razor
+++ b/SimTECH/SimTECH/Pages/Leagues/RangeInput.razor
@@ -7,18 +7,19 @@
             <MudIconButton Icon="@Icons.Material.Filled.Add" Color="Color.Tertiary" Size="Size.Small" OnClick="AppendRow" />
         </ToolBarContent>
         <HeaderContent>
-            <MudTh>Less than</MudTh>
-            <MudTh>Minimum</MudTh>
-            <MudTh>Maximum</MudTh>
+            <MudTh>&lt; LESS</MudTh>
+            <MudTh>MIN</MudTh>
+            <MudTh>MAX</MudTh>
+            <MudTh></MudTh>
         </HeaderContent>
         <RowTemplate>
-            <MudTd DataLabel="Comparer">
+            <MudTd>
                 <MudNumericField @bind-Value="@context.Comparer" Class="field-xs" />
             </MudTd>
-            <MudTd DataLabel="Minimum">
+            <MudTd>
                 <MudNumericField @bind-Value="@context.Minimum" Class="field-xs" />
             </MudTd>
-            <MudTd DataLabel="Maximum">
+            <MudTd>
                 <MudNumericField @bind-Value="@context.Maximum" Class="field-xs" />
             </MudTd>
             <MudTd>
