--- a/SimTECH/SimTECH/Pages/Racing/PostRace.razor
+++ b/SimTECH/SimTECH/Pages/Racing/PostRace.razor
@@ -13,8 +13,8 @@
             <MudItem xs=12>
                 <MudPaper Elevation="15" Height="75px" Class="pa-4">
                     <MudStack Row="true" Justify="Justify.SpaceBetween" AlignItems="AlignItems.Center">
-                        <div>
-                            <MudText Typo="Typo.body2" Color="Color.Warning" Style="width: 30%">This page is quite unfinished</MudText>
+                        <div style="width: 30%">
+                            <MudText Typo="Typo.body2" Color="Color.Warning">This page is quite unfinished</MudText>
                             <MudText Typo="Typo.body2" Color="Color.Error">Wtf so much free space?</MudText>
                         </div>
 
