--- a/SimTECH/SimTECH/Pages/Racing/Race.razor
+++ b/SimTECH/SimTECH/Pages/Racing/Race.razor
@@ -189,7 +189,7 @@
                                 }
                             }
                         </div>
-
+                        <MudProgressLinear></MudProgressLinear>
                         <SimProgressLinear Bars="@(context.LapScores.Select(e => ((NumberHelper.Percentage(1, calculationCount)), (e.TyreColour ?? Constants.DefaultColour))).ToList())" />
                     </MudTd>
                 </RowTemplate>
