--- a/SimTECH/SimTECH/Pages/Season/EntrantWizard/Steps/AddEngines.razor
+++ b/SimTECH/SimTECH/Pages/Season/EntrantWizard/Steps/AddEngines.razor
@@ -2,6 +2,7 @@
 
 <MudContainer MaxWidth="MaxWidth.Small">
     <MudPaper Elevation="15">
+        <MudText Color="Color.Tertiary">Amount engines: @(Model.BaseEngines.Count)</MudText>
         <MudTable T="Engine"
                   Items="@Engines"
                   @ref="@_table"
