--- a/SimTECH/SimTECH/Pages/Season/EntrantWizard/Steps/AddTeams.razor
+++ b/SimTECH/SimTECH/Pages/Season/EntrantWizard/Steps/AddTeams.razor
@@ -2,6 +2,7 @@
 
 <MudContainer MaxWidth="MaxWidth.Medium">
     <MudPaper Elevation="15">
+        <MudText Color="Color.Tertiary">Amount teams: @(Model.BaseTeams.Count)</MudText>
         <MudTable T="Team"
                   Items="@Teams"
                   @bind-SelectedItems="@Model.BaseTeams"
