--- a/SimTECH/SimTECH/Pages/Season/ScoreStandings/DriverResults.razor
+++ b/SimTECH/SimTECH/Pages/Season/ScoreStandings/DriverResults.razor
@@ -19,7 +19,7 @@
         <HeaderContent>
             <MudTh Class="number-col"></MudTh>
             <MudTh Class="accent-cell"></MudTh>
-            <MudTh>Driver</MudTh>
+            <MudTh Style="width: 220px">Driver</MudTh>
             <MudTh Class="number-col">NO</MudTh>
             <MudTh>PTS</MudTh>
             @foreach (var round in CountryRounds.OrderBy(e => e.Key))
@@ -37,7 +37,7 @@
             <MudTd Class="accent-cell">
                 <SmolAccent Colour="@context.Colour" />
             </MudTd>
-            <MudTd>
+            <MudTd Class="overflow-hider">
                 <MudStack Row="true" Spacing="1" AlignItems="AlignItems.Center">
                     <MudText Class="overflow-hider">@context.Name</MudText>
                     <MudSpacer />
