--- a/SimTECH/SimTECH/Pages/Season/ScoreStandings/Standings.razor
+++ b/SimTECH/SimTECH/Pages/Season/ScoreStandings/Standings.razor
@@ -104,7 +104,7 @@
             {
                 Id = team.Id,
                 Position = position,
-                Name = team.Name,
+                Name = team.Team.Name,
                 Principal = team.Principal,
                 Nationality = team.Team.Country,
                 Colour = team.Colour,
