--- a/SimTECH/SimTECH/Pages/UserManual/Guide.razor
+++ b/SimTECH/SimTECH/Pages/UserManual/Guide.razor
@@ -28,6 +28,7 @@
                                      Icon="@(racingFolderExpanded ? Icons.Custom.Uncategorized.FolderOpen : Icons.Custom.Uncategorized.Folder)">
                         <MudTreeViewItem Text="Distance" Value="@(typeof(Distance))" Icon="@Icons.Custom.FileFormats.FileExcel" />
                         <MudTreeViewItem Text="Advance" Value="@(typeof(Advance))" Icon="@Icons.Custom.FileFormats.FileExcel" />
+                        <MudTreeViewItem Text="Reliability" Value="@(typeof(Reliability))" Icon="@Icons.Custom.FileFormats.FileExcel" />
                         <MudTreeViewItem Text="Strategy" Value="@(typeof(Strategy))" Icon="@Icons.Custom.FileFormats.FileExcel" />
                         <MudTreeViewItem Text="Overtaking" Value="@(typeof(Overtaking))" Icon="@Icons.Custom.FileFormats.FileExcel" />
                         <MudTreeViewItem Text="Safety / Caution" Value="@(typeof(SafetyMoment))" Icon="@IconCollection.AlertTriangle" />
