--- a/SimTECH/SimTECH/wwwroot/css/site.css
+++ b/SimTECH/SimTECH/wwwroot/css/site.css
@@ -153,16 +153,32 @@ th {
     display: none !important;
 }
 
+.fallback-muted-background-gray {
+    background-color: rgba(230, 230, 230, 0.25) !important;
+}
+
+.fallback-muted-background-primary {
+    background-color: rgba(126, 87, 194, 0.25) !important;
+}
+
+.fallback-muted-background-secondary {
+    background-color: rgba(236, 64, 122, 0.25) !important;
+}
+
+.fallback-muted-background-tertiary {
+    background-color: rgba(255, 143, 0, 0.25) !important;
+}
+
 .muted-background-primary {
-    background-color: rgba(var(--mud-palette-primary), 0.5);
+    background-color: rgba(var(--mud-palette-primary), 0.5) !important;
 }
 
 .muted-background-secondary {
-    background-color: rgba(var(--mud-palette-secondary), 0.5);
+    background-color: rgba(var(--mud-palette-secondary), 0.5) !important;
 }
 
 .muted-background-tertiary {
-    background-color: rgba(var(--mud-palette-tertiary), 0.5);
+    background-color: rgba(var(--mud-palette-tertiary), 0.5) !important;
 }
 
 .font-default {
@@ -183,6 +199,11 @@ th {
 
 .font-caption {
     font-family: F1Bold;
+}
+
+.typo-caption {
+    font-family: F1Bold;
+    font-size: .75rem !important;
 }
 
 .font-overline {
