--- a/SimTECH/SimTECH/Pages/Leagues/Leagues.razor
+++ b/SimTECH/SimTECH/Pages/Leagues/Leagues.razor
@@ -62,7 +62,7 @@
                                         </tr>
                                     </thead>
                                     <tbody>
-                                        @foreach (var range in rangeGroup)
+                                        @foreach (var range in rangeGroup.OrderBy(e => e.Comparer))
                                         {
                                             <tr>
                                                 <td>@range.Comparer</td>
