--- a/SimTECH/SimTECH/Pages/Season/EntrantWizard/Steps/AddDrivers.razor
+++ b/SimTECH/SimTECH/Pages/Season/EntrantWizard/Steps/AddDrivers.razor
@@ -2,6 +2,7 @@
 
 <MudContainer MaxWidth="MaxWidth.Medium">
     <MudPaper Elevation="15">
+        <MudText Color="Color.Tertiary">Amount drivers: @(Model.BaseDrivers.Count)</MudText>
         <MudTable T="Driver"
                   @ref="@_table"
                   @bind-SelectedItems="@Model.BaseDrivers"
@@ -46,7 +47,7 @@
 
     protected override async Task OnInitializedAsync()
     {
-        Drivers = await _driverService.GetDrivers();
+        Drivers = await _driverService.GetAvailableDrivers();
     }
 
     private void PageChange(int index)
