--- a/SimTECH/SimTECH/Pages/Season/Entrants/SeasonDrivers.razor
+++ b/SimTECH/SimTECH/Pages/Season/Entrants/SeasonDrivers.razor
@@ -26,9 +26,14 @@
                     </MudStack>
                 </CellTemplate>
             </TemplateColumn>
-            <TemplateColumn T="SeasonDriver" SortBy="e => e.Number" Title="No." HeaderClass="number-col hide-sort-icons" CellClass="number-col">
+            <TemplateColumn T="SeasonDriver" SortBy="e => e.Number" Title="NO" HeaderClass="number-col hide-sort-icons" CellClass="number-col">
                 <CellTemplate>
                     <NumberDisplay Colour="@context.Item.SeasonTeam?.Colour" Accent="@context.Item.SeasonTeam?.Accent">@context.Item.Number</NumberDisplay>
+                </CellTemplate>
+            </TemplateColumn>
+            <TemplateColumn T="SeasonDriver" Title="Age" Sortable="false" CellClass="font-caption">
+                <CellTemplate>
+                    @(context.Item.GimmeAge(Season.Year))
                 </CellTemplate>
             </TemplateColumn>
             <PropertyColumn Property="e => e!.Skill" CellClass="font-caption" />
