smol styling updoots

--- a/SimTECH/SimTECH/Pages/Factors/Manufacturers.razor
+++ b/SimTECH/SimTECH/Pages/Factors/Manufacturers.razor
@@ -12,7 +12,7 @@
             <MudSpacer />
             <MudButton Variant="Variant.Outlined" Color="Color.Primary" OnClick="AddItem">New</MudButton>
         </MudStack>
-        <MudText Typo="Typo.body2" Color="Color.Info">These values do not apply when using wet tyres.</MudText>
+        <MudText Typo="Typo.body2" Color="Color.Info" Class="px-4">These values do not apply when using wet tyres.</MudText>
     </MudPaper>
     <MudTable Items="@ManufacturerData" Bordered="true" Dense="true">
         <HeaderContent>
