--- a/SimTECH/SimTECH/Pages/Factors/Tyres.razor
+++ b/SimTECH/SimTECH/Pages/Factors/Tyres.razor
@@ -13,7 +13,7 @@
             <MudSpacer />
             <MudButton Variant="Variant.Outlined" Color="Color.Primary" OnClick="AddItem">New</MudButton>
         </MudStack>
-        <MudText Typo="Typo.body2" Color="Color.Info">Distance/advance: @(advanceDistance)Km</MudText>
+        <MudText Typo="Typo.body2" Color="Color.Info" Class="px-4">Distance per advance: @(advanceDistance)Km</MudText>
     </MudPaper>
     <MudDataGrid T="Tyre" Items="@TyreData" Bordered="true" Dense="true">
         <Columns>
