--- a/SimTECH/SimTECH/Pages/Setup/Tracks.razor
+++ b/SimTECH/SimTECH/Pages/Setup/Tracks.razor
@@ -43,33 +43,33 @@
         <ChildRowContent>
             <MudText Typo="Typo.h6">@context.Item.Name</MudText>
             <MudStack Row="true">
-                <MudPaper>
+                <MudPaper Class="px-2 py-1">
                     <MudStack AlignItems="AlignItems.Center">
-                        <MudText>Aero modifier:</MudText>
+                        <MudText>Aero modifier</MudText>
                         <MudText Typo="Typo.caption">@(context.Item.AeroMod)x</MudText>
                     </MudStack>
                 </MudPaper>
-                <MudPaper>
+                <MudPaper Class="px-2 py-1">
                     <MudStack AlignItems="AlignItems.Center">
-                        <MudText>Chassis modifier:</MudText>
+                        <MudText>Chassis modifier</MudText>
                         <MudText Typo="Typo.caption">@(context.Item.ChassisMod)x</MudText>
                     </MudStack>
                 </MudPaper>
-                <MudPaper>
+                <MudPaper Class="px-2 py-1">
                     <MudStack AlignItems="AlignItems.Center">
-                        <MudText>Powertrain modifier:</MudText>
+                        <MudText>Powertrain modifier</MudText>
                         <MudText Typo="Typo.caption">@(context.Item.PowerMod)x</MudText>
                     </MudStack>
                 </MudPaper>
-                <MudPaper>
+                <MudPaper Class="px-2 py-1">
                     <MudStack AlignItems="AlignItems.Center">
-                        <MudText>Qualifying modifier:</MudText>
+                        <MudText>Qualifying modifier</MudText>
                         <MudText Typo="Typo.caption">@(context.Item.QualifyingMod)x</MudText>
                     </MudStack>
                 </MudPaper>
-                <MudPaper>
+                <MudPaper Class="px-2 py-1">
                     <MudStack AlignItems="AlignItems.Center">
-                        <MudText>Defense modifier:</MudText>
+                        <MudText>Defense modifier</MudText>
                         <MudText Typo="Typo.caption">@(context.Item.DefenseMod)x</MudText>
                     </MudStack>
                 </MudPaper>
