--- a/SimTECH/SimTECH/Pages/Factors/TyreEditor.razor
+++ b/SimTECH/SimTECH/Pages/Factors/TyreEditor.razor
@@ -8,7 +8,7 @@
     <DialogContent>
         <MudForm Model="@Model">
             <MudTextField T="string" @bind-Value="@Model.Name" Label="Name" Class="field-md" />
-            <MudColorPicker @bind-Text="@Model.Colour" Label="Colour" Placeholder="Select colour" DisableAlpha="true" Class="field-md" />
+            <MudColorPicker @bind-Text="@Model.Colour" Label="Colour" Placeholder="Select colour" Class="field-md" />
             <MudNumericField T="int" @bind-Value="@Model.Pace" Label="Pace" Class="field-md" />
 
             <MudStack Row="true" Justify="Justify.FlexStart" Spacing="4">
