--- a/SimTECH/SimTECH/Pages/Season/Entrants/SeasonTeamEditor.razor
+++ b/SimTECH/SimTECH/Pages/Season/Entrants/SeasonTeamEditor.razor
@@ -19,8 +19,8 @@
 
             <MudTextField @bind-Value="@Model.Name" Label="Name" Class="field-md" Required />
             <MudTextField @bind-Value="@Model.Principal" Label="Team Principal" Class="field-md" Required />
-            <MudColorPicker @bind-Text="@Model.Colour" Label="Colour" Class="field-sm" DisableAlpha="true" />
-            <MudColorPicker @bind-Text="@Model.Accent" Label="Accent" Class="field-sm" DisableAlpha="true" />
+            <MudColorPicker @bind-Text="@Model.Colour" Label="Colour" Class="field-sm" />
+            <MudColorPicker @bind-Text="@Model.Accent" Label="Accent" Class="field-sm" />
             <MudNumericField @bind-Value="@Model.BaseValue" Label="BaseValue" Class="field-sm" />
             <MudNumericField @bind-Value="@Model.Aero" Label="Aero" Class="field-sm" />
             <MudNumericField @bind-Value="@Model.Chassis" Label="Chassis" Class="field-sm" />
